Добавил RippleView для AlarmActivity
Tag: @New

--- a/app/src/main/res/layout/activity_alarm.xml
+++ b/app/src/main/res/layout/activity_alarm.xml
@@ -9,6 +9,15 @@
         android:orientation="vertical"
         tools:context=".screen.view.notification.AlarmActivity">
 
+    <sgtmelon.scriptum.view.RippleBackground
+            android:id="@+id/alarm_ripple_background"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"/>
+
     <ImageView
             android:layout_width="@dimen/icon_128dp"
             android:layout_height="@dimen/icon_128dp"
