--- a/app/src/main/res/layout/activity_notification.xml
+++ b/app/src/main/res/layout/activity_notification.xml
@@ -1,19 +1,47 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:tools="http://schemas.android.com/tools"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:orientation="vertical"
-              tools:context=".screen.view.notification.NotificationActivity">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        tools:context=".screen.view.notification.NotificationActivity">
 
-    <include layout="@layout/include_toolbar"/>
+    <data>
 
-    <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/notification_recycler"
-            style="@style/RecyclerView"
+        <import type="sgtmelon.scriptum.R"/>
+        <import alias="v" type="android.view.View"/>
+
+        <variable name="listEmpty" type="boolean"/>
+
+    </data>
+
+    <LinearLayout
+            android:id="@+id/notification_parent_container"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            tools:itemCount="3"
-            tools:listitem="@layout/item_notification"/>
+            android:orientation="vertical">
 
-</LinearLayout>
+        <include layout="@layout/include_toolbar"/>
+
+        <FrameLayout android:layout_width="match_parent" android:layout_height="match_parent">
+
+            <include
+                    android:id="@+id/notification_info_include"
+                    layout="@layout/include_info"
+                    android:visibility='@{listEmpty ? v.VISIBLE : v.GONE}'
+                    app:details='@{R.string.info_notification_details}'
+                    app:icon='@{R.mipmap.ic_launcher}'
+                    app:title='@{R.string.info_notification_title}'/>
+
+            <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/notification_recycler"
+                    style="@style/RecyclerView"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:visibility='@{listEmpty ? v.GONE : v.VISIBLE}'
+                    tools:itemCount="3"
+                    tools:listitem="@layout/item_notification"/>
+
+        </FrameLayout>
+
+    </LinearLayout>
+
+</layout>
