--- a/app/src/main/res/layout/fragment_bin.xml
+++ b/app/src/main/res/layout/fragment_bin.xml
@@ -20,9 +20,7 @@
 
         <include layout="@layout/include_toolbar"/>
 
-        <FrameLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
+        <FrameLayout android:layout_width="match_parent" android:layout_height="match_parent">
 
             <include
                     android:id="@+id/bin_info_include"
@@ -37,8 +35,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     tools:listitem="@layout/item_note_text"
-                    tools:itemCount="3"
-                    android:visibility='@{!listEmpty ? v.VISIBLE : v.GONE}'/>
+                    tools:itemCount="1"
+                    android:visibility='@{listEmpty ? v.GONE : v.VISIBLE}'/>
 
         </FrameLayout>
 
