--- a/app/src/main/res/layout/activity_notification.xml
+++ b/app/src/main/res/layout/activity_notification.xml
@@ -9,7 +9,7 @@
         <import type="sgtmelon.scriptum.R"/>
         <import alias="v" type="android.view.View"/>
 
-        <variable name="listEmpty" type="boolean"/>
+        <variable name="isListEmpty" type="boolean"/>
 
     </data>
 
@@ -26,7 +26,6 @@
             <include
                     android:id="@+id/notification_info_include"
                     layout="@layout/include_info"
-                    android:visibility='@{listEmpty ? v.VISIBLE : v.GONE}'
                     app:details='@{R.string.info_notification_details}'
                     app:icon='@{R.mipmap.ic_launcher}'
                     app:title='@{R.string.info_notification_title}'/>
@@ -36,7 +35,7 @@
                     style="@style/RecyclerView"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:visibility='@{listEmpty ? v.GONE : v.VISIBLE}'
+                    android:visibility='@{isListEmpty ? v.GONE : v.VISIBLE}'
                     tools:itemCount="3"
                     tools:listitem="@layout/item_notification"/>
 
