--- a/app/src/main/res/layout/fragment_bin.xml
+++ b/app/src/main/res/layout/fragment_bin.xml
@@ -8,7 +8,7 @@
         <import type="sgtmelon.scriptum.R"/>
         <import alias="v" type="android.view.View"/>
 
-        <variable name="listEmpty" type="boolean"/>
+        <variable name="isListEmpty" type="boolean"/>
 
     </data>
 
@@ -36,7 +36,7 @@
                     android:layout_height="match_parent"
                     tools:listitem="@layout/item_note_text"
                     tools:itemCount="1"
-                    android:visibility='@{listEmpty ? v.GONE : v.VISIBLE}'/>
+                    android:visibility='@{isListEmpty ? v.GONE : v.VISIBLE}'/>
 
         </FrameLayout>
 
