--- a/app/src/main/res/values/dimens_app.xml
+++ b/app/src/main/res/values/dimens_app.xml
@@ -25,6 +25,8 @@
     <dimen name="radius_4dp">4dp</dimen>
     <dimen name="radius_8dp">8dp</dimen>
 
+    <dimen name="stroke_2dp">2dp</dimen>
+
     <integer name="dlg_recycler_padding">24</integer>
     <integer name="dlg_color_column">4</integer>
 
