--- a/app/src/main/res/layout/include_item_note_info.xml
+++ b/app/src/main/res/layout/include_item_note_info.xml
@@ -21,12 +21,15 @@
             android:layout_marginTop="@dimen/layout_8dp"
             android:orientation="horizontal">
 
+        <!-- TODO #RELEASE -->
+
         <ImageView
-                android:id="@+id/note_info_rank_image"
+                android:id="@+id/note_notification_image"
                 style="@style/Image.NoteItem.Info"
                 android:contentDescription="@null"
-                android:visibility='@{noteItem.rankId.size == 0 ? v.GONE : v.VISIBLE}'
-                app:srcCompat="@drawable/ic_rank"/>
+                android:visibility='@{noteItem.type == noteType.TEXT ? v.VISIBLE : v.GONE}'
+                app:srcCompat="@drawable/ic_notifications"
+                tools:visibility="visible"/>
 
         <ImageView
                 android:id="@+id/note_info_bind_image"
@@ -34,7 +37,16 @@
                 android:contentDescription="@null"
                 android:src='@{noteItem.type == noteType.TEXT ? @drawable/ic_bind_text : @drawable/ic_bind_roll}'
                 android:visibility='@{noteItem.status ? v.VISIBLE : v.GONE}'
-                tools:srcCompat="@drawable/ic_bind_roll"/>
+                tools:srcCompat="@drawable/ic_bind_roll"
+                tools:visibility="visible"/>
+
+        <ImageView
+                android:id="@+id/note_info_rank_image"
+                style="@style/Image.NoteItem.Info"
+                android:contentDescription="@null"
+                android:visibility='@{noteItem.rankId.size == 0 ? v.GONE : v.VISIBLE}'
+                app:srcCompat="@drawable/ic_rank"
+                tools:visibility="visible"/>
 
         <TextView
                 android:id="@+id/note_info_progress_text"
