--- a/app/src/main/res/values/strings_preference.xml
+++ b/app/src/main/res/values/strings_preference.xml
@@ -1,43 +1,62 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="pref_first_start" translatable="false">key_first_start</string>
+    <string name="header_app">App</string>
+    <string name="header_notification">Notifications</string>
+    <string name="header_note">Notes</string>
+    <string name="header_save">Save</string>
+    <string name="header_other">Other</string>
 
+    <!---->
 
-    <!-- App -->
-    <string name="pref_app_header">App</string>
+    <string name="title_app_theme">Theme</string>
 
-    <string name="pref_theme_title">Theme</string>
-    <string name="pref_theme_summary">Selected theme</string>
-    <string name="pref_key_theme" translatable="false">key_theme</string>
+    <string name="title_notification_signal">Signal type</string>
 
-    <string-array name="pref_theme_text">
+    <string name="title_note_sort">Sort notes</string>
+    <string name="title_note_color">Default note color</string>
+
+    <string name="title_save_pause">Save when application paused</string>
+    <string name="title_save_auto">Auto save</string>
+    <string name="title_save_time">Period</string>
+
+    <string name="title_other_rate">Rate</string>
+    <string name="title_other_about">About app</string>
+
+    <!---->
+
+    <string name="summary_app_theme">Selected theme</string>
+
+    <string name="summary_notification_signal">will be used for notify you</string>
+
+    <string name="summary_note_sort">Will be used by default</string>
+    <string name="summary_note_color">Will be used by default</string>
+
+    <string name="summary_save_pause">When editing a note</string>
+    <string name="summary_save_auto">When editing a note</string>
+    <string name="summary_save_time">Number of minutes</string>
+
+    <!---->
+
+    <string-array name="text_app_theme">
         <item>Light</item>
         <item>Dark</item>
     </string-array>
 
+    <string-array name="text_notification_signal">
+        <item>Melody</item>
+        <item>Vibration</item>
+        <item>Torch</item>
+    </string-array>
 
-    <!-- Note -->
-    <string name="pref_note_header">Notes</string>
-
-    <string name="pref_sort_title">Sort notes</string>
-    <string name="pref_sort_summary">Will be used by default</string>
-    <string name="pref_sort_summary_start">By</string>
-    <!-- Ключ был изменён из-за смены концепции сортировки -->
-    <string name="pref_key_sort" translatable="false">key_note_sort</string>
-
-    <string-array name="pref_sort_text">
+    <string-array name="text_note_sort">
         <item>By time of change</item>
         <item>By time of creation</item>
         <item>By categories</item>
         <item>By color</item>
     </string-array>
 
-    <string name="pref_color_title">Default note color</string>
-    <string name="pref_color_summary">Will be used by default</string>
-    <string name="pref_key_color" translatable="false">key_color</string>
-
-    <string-array name="pref_color_text">
+    <string-array name="text_note_color">
         <item>Red</item>
         <item>Purple</item>
         <item>Indigo</item>
@@ -51,35 +70,30 @@
         <item>White</item>
     </string-array>
 
-    <!-- Save -->
-    <string name="pref_save_header">Save</string>
-
-    <string name="pref_pause_save_title">Save when application paused</string>
-    <string name="pref_pause_save_summary">When editing a note</string>
-    <string name="pref_key_pause_save" translatable="false">key_pause_save</string>
-
-    <string name="pref_auto_save_title">Auto save</string>
-    <string name="pref_auto_save_summary">When editing a note</string>
-    <string name="pref_key_auto_save" translatable="false">key_auto_save</string>
-
-    <string name="pref_save_time_title">Period</string>
-    <string name="pref_save_time_summary">Number of minutes</string>
-    <string name="pref_key_save_time" translatable="false">key_save_time</string>
-
-    <string-array name="pref_save_time_text">
+    <string-array name="text_save_time">
         <item>1 minute</item>
         <item>3 minutes</item>
         <item>7 minutes</item>
     </string-array>
 
+    <!---->
 
-    <!-- Other -->
-    <string name="pref_other_header">Other</string>
+    <string name="key_first_start" translatable="false">key_first_start</string>
 
-    <string name="pref_rate_title">Rate</string>
-    <string name="pref_key_rate" translatable="false">key_rate</string>
+    <string name="key_app_theme" translatable="false">key_theme</string>
 
-    <string name="pref_about_title">About app</string>
-    <string name="pref_key_about" translatable="false">key_about</string>
+    <string name="key_notification_signal" translatable="false">key_notification_signal</string>
+
+    <string name="key_note_sort" translatable="false">key_note_sort</string>
+    <string name="key_note_color" translatable="false">key_color</string>
+
+    <string name="key_save_pause" translatable="false">key_pause_save</string>
+    <string name="key_save_auto" translatable="false">key_auto_save</string>
+    <string name="key_save_time" translatable="false">key_save_time</string>
+
+    <string name="key_other_rate" translatable="false">key_rate</string>
+    <string name="key_other_about" translatable="false">key_about</string>
+
+
 
 </resources>
