--- a/app/src/main/res/values/values_preference.xml
+++ b/app/src/main/res/values/values_preference.xml
@@ -1,20 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <!-- Settings values -->
-    <bool name="pref_first_start_default">true</bool>
-    <integer name="pref_color_default">10</integer>
-    <bool name="pref_pause_save_default">false</bool>
-    <bool name="pref_auto_save_default">false</bool>
-    <integer name="pref_save_time_default">0</integer>
-    <integer name="pref_theme_default">0</integer>
+    <bool name="value_first_start">true</bool>
 
-    <integer-array name="pref_save_time_value">
+    <integer name="value_app_theme">0</integer>
+    <integer name="value_notification_signal">0</integer>
+    <integer name="value_note_sort">0</integer>
+    <integer name="value_note_color">10</integer>
+    <bool name="value_save_pause">false</bool>
+    <bool name="value_save_auto">false</bool>
+    <integer name="value_save_time">0</integer>
+
+    <integer-array name="value_save_time_array">
         <item>60000</item>  <!-- 1 минута -->
         <item>180000</item> <!-- 3 минуты -->
         <item>420000</item> <!-- 7 минут -->
     </integer-array>
 
-    <integer name="pref_logo_click_value">9</integer>
+    <integer name="value_develop_open">9</integer>
 
 </resources>
