--- a/app/src/main/res/values/values_preference.xml
+++ b/app/src/main/res/values/values_preference.xml
@@ -4,9 +4,15 @@
     <bool name="value_first_start">true</bool>
 
     <integer name="value_app_theme">0</integer>
+
+    <integer name="value_notification_repeat">0</integer>
     <integer name="value_notification_signal">0</integer>
+    <bool name="value_notification_increase">false</bool>
+    <integer name="value_notification_volume">75</integer>
+
     <integer name="value_note_sort">0</integer>
     <integer name="value_note_color">10</integer>
+
     <bool name="value_save_pause">false</bool>
     <bool name="value_save_auto">false</bool>
     <integer name="value_save_time">0</integer>
